# sparta

./: Cargo.toml  README.md
crates/tui/: Cargo.toml
crates/tui/src/: ui.rs
metrics/: Cargo.toml
metrics/src/: main.rs
src/: main.rs
tui/: Cargo.toml
tui/src/: api.rs  app.rs  main.rs  ui.rs
