[workspace]
members = ["metrics", "tui"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "server-auto"] }
open = "5"
prometheus = "0.13"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
