[package]
name = "trading-observability"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
prometheus.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
